# catalyst-sdwan-super-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: dependabot-auto-merge.yml  docker.yml  docs.yml  lint.yml  milestone-rollover.yml  release.yml  test.yml
docs/: index.md
docs/architecture/: data-flow.md  overview.md
docs/contributing/: development.md  release-process.md
docs/dev/: issue-31-plan.md
docs/getting-started/: first-run.md  install.md  sandbox.md
docs/guides/: docker.md  granularity.md  mcp-clients.md  pagination.md  read-write.md  spec-versions.md  tool-splitting.md
docs/reference/: authentication.md  cli.md  configuration.md
docs/superpowers/plans/: 2026-05-24-http-auth-middleware.md  2026-05-24-pagination.md
docs/superpowers/specs/: 2026-05-24-http-auth-middleware-design.md  2026-05-24-pagination-design.md
sdwan_mcp/: __init__.py  auth.py  config.py  diff.py  dispatcher.py  loader.py  pagination.py  server.py  tools.py  transport_auth.py
sdwan_mcp/fetcher/: __init__.py  discover.py  fetch.py  stitch.py  validate.py
specs/: README.md
tests/: conftest.py  test_config.py  test_diff.py  test_dispatcher.py  test_fetcher_discover.py  test_fetcher_fetch.py  test_fetcher_integration.py  test_fetcher_stitch.py  test_fetcher_validate.py  test_loader.py  test_pagination.py  test_retry.py  test_tools.py  test_transport_auth.py
tests/fetcher_fixtures/: devnet_minimal.html  model_fragment_device.json  model_fragment_devicelist.json  model_fragment_policy.json  op_fragment_get.json  op_fragment_list.json  op_fragment_policy.json  op_fragment_post.json
